<resources>
    <string name="app_name">FoodOz</string>
    <string name="creator">Designed By Sagorika</string>
    <string name="mobile_number">Mobile Number (10 digits)</string>
    <string name="password">Password (Min. 4 characters)</string>
    <string name="login">Log In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="signup">Don\'t have an account? Sign Up!</string>
    <string name="preference_file">Foodoz Preferences</string>
    <string name="hello">Hello ^.^ there </string>
    <string name="welcome_to_foodoz">Welcome to FOODOZ!</string>
    <string name="forgot_pass">Enter your registered mobile number and email below:</string>
    <string name="email_address">Email Address</string>
    <string name="next">Next</string>
    <string name="email_id">Enter Email ID</string>
    <string name="name">Enter Name (Min. 3 characters)</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="log_out">Log Out</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="user_credentials">User Credentials</string>
    <string name="dashboard">Home</string>
    <string name="profile">My Profile</string>
    <string name="favourites">Favourite Restaurants</string>
    <string name="faq">FAQs</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="otp">OTP (4 characters)</string>
    <string name="new_pass">New Password (6 characters)</string>
    <string name="submit">Submit</string>
    <string name="go_to_cart">Proceed To Cart</string>
    <string name="order_history_static_text">Your previous orders are listed below :</string>
    <string name="no_orders">You haven\'t placed any orders yet</string>
    <string name="restaurant_name">Restaurant name</string>
    <string name="dummy_date">26/06/2020</string>
    <string name="order_history">Order History</string>
</resources>
