<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/dashboard" />

        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />

        <item
            android:id="@+id/favourites"
            android:icon="@drawable/ic_favourites"
            android:title="@string/favourites" />

        <item
            android:id="@+id/orders"
            android:icon="@drawable/ic_order"
            android:title="@string/order_history" />

        <item
            android:id="@+id/faq"
            android:icon="@drawable/ic_faq"
            android:title="@string/faq" />

        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/log_out" />
    </group>

</menu>