<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red_logo_color"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/ic_app_logo" />

    <EditText
        android:id="@+id/etMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgLogo"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/text_boundary_background"
        android:drawableStart="@drawable/ic_phone_android_black_24dp"
        android:drawablePadding="3dp"
        android:hint="@string/mobile_number"
        android:inputType="phone"
        android:maxLength="10"
        android:maxLines="1"
        android:padding="10dp" />

    <EditText
        android:id="@+id/etAPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etMobileNumber"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/text_boundary_background"
        android:drawableStart="@drawable/ic_lock_grey_24dp"
        android:drawablePadding="3dp"
        android:hint="@string/password"
        android:inputType="numberPassword"
        android:maxLength="6"
        android:maxLines="1"
        android:padding="10dp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etAPassword"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/dark_blue"
        android:elevation="10dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:padding="8dp"
        android:text="@string/forgot_password"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/light_yellow" />

    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:focusable="true"
        android:padding="8dp"
        android:text="@string/signup"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/light_yellow" />

</RelativeLayout>