<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_yellow"
    tools:context=".activity.ForgotPasswordActivity">

    <RelativeLayout
        android:id="@+id/rlContentMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/red_logo_color">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/ic_app_logo" />

        <TextView
            android:id="@+id/txtInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgLogo"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:text="@string/forgot_pass"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/light_yellow"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etMobileNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtInfo"
            android:layout_margin="10dp"
            android:background="@drawable/text_boundary_background"
            android:drawableStart="@drawable/ic_phone_android_black_24dp"
            android:hint="@string/mobile_number"
            android:inputType="phone"
            android:maxLength="10"
            android:maxLines="1"
            android:padding="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black"
            android:textColorHint="@color/grey_hints" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etMobileNumber"
            android:layout_margin="10dp"
            android:background="@drawable/text_boundary_background"
            android:drawableStart="@drawable/ic_email_grey_24dp"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black"
            android:textColorHint="@color/grey_hints" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etEmail"
            android:layout_margin="10dp"
            android:background="@color/dark_blue"
            android:elevation="10dp"
            android:padding="10dp"
            android:text="@string/next"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffff"
            android:textStyle="bold" />

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>
