<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_yellow"
    tools:context=".activity.MainActivity">

    <RelativeLayout
        android:id="@+id/rlOTP"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/red_logo_color">

        <TextView
            android:id="@+id/txtH1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:padding="10dp"
            android:text="Enter the received OTP below: "
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/light_yellow"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etOTP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtH1"
            android:layout_margin="10dp"
            android:background="@drawable/text_boundary_background"
            android:hint="@string/otp"
            android:inputType="number"
            android:maxLength="4"
            android:maxLines="1"
            android:padding="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black"
            android:textColorHint="@color/grey_hints" />

        <EditText
            android:id="@+id/etNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etOTP"
            android:layout_margin="10dp"
            android:background="@drawable/text_boundary_background"
            android:hint="@string/new_pass"
            android:inputType="numberPassword"
            android:maxLength="6"
            android:maxLines="1"
            android:padding="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black"
            android:textColorHint="@color/grey_hints" />

        <EditText
            android:id="@+id/etConfirmNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etNewPassword"
            android:layout_margin="10dp"
            android:background="@drawable/text_boundary_background"
            android:hint="@string/confirm_password"
            android:inputType="numberPassword"
            android:maxLength="6"
            android:maxLines="1"
            android:padding="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black"
            android:textColorHint="@color/grey_hints" />

        <Button
            android:id="@+id/btnSubmitOTP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etConfirmNewPassword"
            android:layout_margin="10dp"
            android:background="@color/dark_blue"
            android:elevation="10dp"
            android:padding="10dp"
            android:text="@string/submit"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffff"
            android:textStyle="bold" />

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>